# MyEngineGameEngine

./: .gitignore  CMakeLists.txt  README.md
MyEngine/: imgui.ini  main.cpp
MyEngine.xcodeproj/: project.pbxproj
MyEngine.xcodeproj/project.xcworkspace/xcuserdata/priyanshukaushik.xcuserdatad/: UserInterfaceState.xcuserstate
MyEngine/EngineAssets/Models/: cube.obj.memesh
MyEngine/Header Files/: AssetData.h  AssetManager.h  Components.h  EditorContext.h  EngineContext.h  InputManager.h  JobSystem.h  MaterialManager.h  MeshManager.h  Message.h  MessageQueue.h  Project.h  Scene.h  ScriptManager.h  Shader.h  ShaderManager.h  TextureManager.h
MyEngine/Header Files/ECS/: ComponentArray.h  Coordinator.h  ECSSystem.h  ECSSystemManager.h  EntityManager.h
MyEngine/Header Files/ECSSystems/: CameraSystem.h  DebugGizmosSystem.h  LightSystem.h  PhysicsSystem.h  RenderSystem.h  ScriptSystem.h  TerrainSystem.h  UISystem.h
MyEngine/Header Files/UI/: ContentBrowserPanel.h  InspectorPanel.h  UIPanel.h
MyEngine/Shaders/: DebugGizmosFragmentShader.glsl  DebugGizmosVertexShader.glsl  FragmentShader.glsl  GBufferFragmentShader.glsl  GBufferVertexShader.glsl  LightingPassFragmentShader.glsl  LightingPassVertexShader.glsl  ShadowDepthFragmentShader.glsl  ShadowDepthVertexShader.glsl  TextFragmentShader.glsl  UIFragmentShader.glsl  UITextVertexShader.glsl  VertexShader.glsl
MyEngine/Source Files/: AssetManager.cpp  EditorContext.cpp  EngineContext.cpp  InputManager.cpp  MaterialManager.cpp  MeshManager.cpp  Project.cpp  Scene.cpp  ScriptManager.cpp  Shader.cpp  TextureManager.cpp
MyEngine/Source Files/ECS/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  ECSSystem.cpp  ECSSystemManager.cpp  EntityManager.cpp
MyEngine/Source Files/ECSSystems/: CameraSystem.cpp  DebugGizmosSystem.cpp  LightSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp  TerrainSystem.cpp  UISystem.cpp
MyEngine/Source Files/UI/: ContentBrowserPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  UIPanel.cpp
